--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
         "@stackbit/components": "^0.1.43",
         "axios": "^0.18.0",
         "classnames": "^2.3.1",
+        "contentlayer": "dev",
         "jose": "^3.14.3",
         "markdown-to-jsx": "^7.1.3",
-        "next": "^11.1.2",
+        "next": "^12.0.2",
+        "next-contentlayer": "dev",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "sourcebit": "^0.11.0",
@@ -36,6 +38,7 @@
         "postcss-nested": "^5.0.6",
         "prettier": "^2.3.2",
         "sass": "^1.40.0",
+        "source-map-loader": "^3.0.0",
         "webpack-bundle-analyzer": "^4.4.2"
     },
     "description": "A Nextjs page builder, component library and data source mapper all in one.",
